# materialclasses

./: README.md  pyproject.toml
materialclasses/: solidtimber.py  steel.py
materialclasses/models/: solidtimber.py  steel.py  steel_class.py
